--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="author" content="">
 
         <!-- Le styles -->
-        <link href="css/bootstrap.css" rel="stylesheet">
+        <link href="/node_modules/bootstrap-2.3.2/css/bootstrap.min.css" rel="stylesheet">
         <link href="css/font-awesome.css" media="all" rel="stylesheet" type="text/css" />
         <link href="css/style.css" rel="stylesheet">
         <link href="css/switcher.css" rel="stylesheet">
