--- a/index.html
+++ b/index.html
@@ -1275,9 +1275,9 @@
                     <div class="span2">
                         <h2>links </h2>
                         <ul class="unstyled  margintop20">
-                            <li><a href="/disclaimer">disclaimer</a></li>
-                            <li><a href="/privacy">privacy</a></li>
-                            <li><a href="/terms-and-conditions">terms & conditions</a></li>
+                            <li><a href="/disclaimer.html">disclaimer</a></li>
+                            <li><a href="/privacy.html">privacy</a></li>
+                            <li><a href="/terms-and-conditions.html">terms & conditions</a></li>
                             <li></li>
 
                         </ul>
