password too short

--- a/index.html
+++ b/index.html
@@ -162,6 +162,12 @@
                                           Ongeldige wachtwoord
                                         </div>
                                     </small>
+
+                                    <small id="wachtwoordTekortError" class="help-block" style="display: none;">
+                                            <div class="alert alert-error">
+                                              Wachtwoord is te kort!
+                                            </div>
+                                        </small>
 								    <small id="wachtwoordVergeten" class="help-block" style="display: none;"><a>wachtwoord vergeten</a></small>
 								</div>
 							</div>
