--- a/index.html
+++ b/index.html
@@ -168,7 +168,26 @@
                                               Wachtwoord is te kort!
                                             </div>
                                         </small>
-								    <small id="wachtwoordVergeten" class="help-block" style="display: none;"><a>wachtwoord vergeten</a></small>
+                                    <small id="wachtwoordVergeten" class="help-block" style="display: none;">
+                                        <div class="col-sm-12">
+                                            <div class="well">
+                                                <h4>Wachtwoord vergeten?</h4>
+                                                <input style="margin-bottom: 15px;width: 100%;" type="text" name="forgotPassEmail" id="forgotPassEmail" class="form-control" placeholder="geef hier je emailadres"><i class="form-control-feedback" data-bv-icon-for="contactEmail" style="top: 0px;"></i>
+                                                <a class="btn  btn-small btn-warning" id="vraagOpnieuwWachtwoord">Vraag wachtwoord opnieuw</a>
+                                                <!--
+                                                <small data-bv-validator="notEmpty" data-bv-validator-for="contactEmail" class="help-block" style="display: none;">Dit is geen geldig emailadres</small>
+                                                <small data-bv-validator="emailAddress" data-bv-validator-for="contactEmail" class="help-block" style="display: none;">Vul hier je emailadres in</small>-->
+                                            </div>
+                                        </div>
+                                    </small>
+                                    <small id="wachtwoordVerzonden" class="help-block" style="display: none;">
+                                        <div class="col-sm-12">
+                                            <div class="well">
+                                                <h4>Wachtwoord Verzonden!</h4>
+                                            </div>
+                                        </div>
+                                    </small>
+
 								</div>
 							</div>
 							<div class="form-group">
