--- a/index.html
+++ b/index.html
@@ -1352,8 +1352,11 @@
 
                     <div class="span3">
                         <h2>Locatie bioresonantie</h2>
+                        <div class="well">
+                            Alte Bahn 22 Kranenburg 47559 Duitsland
+                        </div>
                         <ul id="twitter" class=" margintop20">
-                            <li>uw locatie, als het ander niet in nijmegen of Kranenburg kan</li>
+                            <li>uw locatie, als het ander niet in Kranenburg kan</li>
                             <li>Arnhem</li>
                             <li>Bemmel</li>
                             <li>Beuningen</li>
