--- a/index.html
+++ b/index.html
@@ -1356,7 +1356,7 @@
                             Alte Bahn 22 Kranenburg 47559 Duitsland
                         </div>
                         <ul id="twitter" class=" margintop20">
-                            <li>uw locatie, als het ander niet in Kranenburg kan</li>
+                            <li>uw locatie, als het ander niet in Kranenburg kan (extra kosten zijn aan verbonden)</li>
                             <li>Arnhem</li>
                             <li>Bemmel</li>
                             <li>Beuningen</li>
