--- a/ad/v1/250x250.html
+++ b/ad/v1/250x250.html
@@ -3,6 +3,6 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     </head>
     <body>
-        <a href="https://emolio.nl"><img src="images/250x250.png" /></a>
+        <a href="https://emolio.nl" target="_blank"><img src="images/250x250.png" /></a>
     </body>
 </html>
