--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                                 <li class="">
                                     <a href="#meditations">Meditatie</a>
                                 </li>
+                                <li class="">
+                                    <a href="/blog/">Meditatie</a>
+                                </li>
                                 <!--<li class="">
                                     <a href="#news">Nieuws</a>
                                 </li>
