--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                     <a href="#meditations">Meditatie</a>
                                 </li>
                                 <li class="">
-                                    <a href="/blog/">Meditatie</a>
+                                    <a href="/blog/">Nieuws</a>
                                 </li>
                                 <!--<li class="">
                                     <a href="#news">Nieuws</a>
