--- a/bioresonantie/prijs-bioresonantie-apparaat/index.html
+++ b/bioresonantie/prijs-bioresonantie-apparaat/index.html
@@ -2,7 +2,7 @@
 <body>
 <script type="text/javascript">
     // Javascript URL redirection
-    window.location.replace("https://emolio.nl/bioresonantie/prijs-bioresonantie-apparaat/");
+    window.location.replace("https://www.emolio.nl/blog/prijs-bioresonantie-apparaat/");
 </script>
 </body>
 </html>
