--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
         <meta charset="utf-8">
         <title>Bioresonantie Apparaat kopen, huren, testen in  Nijmegen, Groesbeek, Kranenburg | emolio</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="">
+        <meta name="description" content="Bioresonantie apparaat kopen, huren, testen">
         <meta name="author" content="">
+        <meta name="google-site-verification" content="kIlUtih8s48c9l9DH8Rq1VQz95_Pk1VI0_ltJk-KtcM" />
 
         <!-- Le styles -->
         <link href="css/bootstrap.css" rel="stylesheet">
