--- a/index.html
+++ b/index.html
@@ -233,9 +233,11 @@
                     <div class="row">
                         <h2> Ervaringen met Bioresonantie Apparaat<i class="icon-thumbs-up"></i></h2>
                         <div class="span7" id="main-media">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/nF96DRgDu-8?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
-                            <!--<iframe src="https://www.youtube.com/embed/bKuDr-5ZoPs?rel=0" width="570" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>-->
+                            <iframe src="https://www.youtube.com/embed/nF96DRgDu-8?rel=0" width="570" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                         </div>
+                        <!--<div class="span7" id="main-media">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/nF96DRgDu-8?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                        </div>-->
                         <div class="span5">
 
                             <h2>Interview met Paul van Maaren</h2>
@@ -254,10 +256,9 @@
 
                      <div class="row">
                         <h2> PSV en bioresonantie<i class="icon-thumbs-up"></i></h2>
-                        <div class="span7" id="">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Brs7ul5YCd0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
-                            <!--<iframe src="https://www.youtube.com/embed/bKuDr-5ZoPs?rel=0" width="570" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>-->
-                        </div>
+                        <div class="span7" id="main-media">
+                                <iframe src="https://www.youtube.com/embed/Brs7ul5YCd0?rel=0" width="570" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                            </div>
                         <div class="span5">
 
                             <h2>PSV en Bioresonantie</h2>
