--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <header id="top">
                 <div class="container home">
                     <div class="row">
-                        <div class="span7" id="main-media">
+                        <div class="span7 main-media" >
                             <iframe src="https://www.youtube.com/embed/933_aTiAPEA?ecver=2&rel=0" width="570" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                         </div>
                         <div class="span5" style="color:#76858A">
@@ -232,12 +232,9 @@
                 <section id="testimonials">
                     <div class="row">
                         <h2> Ervaringen met Bioresonantie Apparaat<i class="icon-thumbs-up"></i></h2>
-                        <div class="span7" id="">
+                        <div class="span7 main-media" >
                             <iframe src="https://www.youtube.com/embed/nF96DRgDu-8?rel=0" width="570" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                         </div>
-                        <!--<div class="span7" id="main-media">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/nF96DRgDu-8?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
-                        </div>-->
                         <div class="span5">
 
                             <h2>Interview met Paul van Maaren</h2>
@@ -256,7 +253,7 @@
 
                      <div class="row">
                         <h2> PSV en bioresonantie<i class="icon-thumbs-up"></i></h2>
-                        <div class="span7" id="">
+                        <div class="span7 main-media">
                                 <iframe src="https://www.youtube.com/embed/Brs7ul5YCd0?rel=0" width="570" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                             </div>
                         <div class="span5">
@@ -920,7 +917,7 @@
                         
                     </div>
                     <div class="row">
-                        <div class="span7" id="">
+                        <div class="span7 main-media">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/bKuDr-5ZoPs?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                             <!--<iframe src="https://www.youtube.com/embed/bKuDr-5ZoPs?rel=0" width="570" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>-->
                         </div>
