--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                             </a>
                         </li>
                         <li class="plan-feature">&euro;684 incl. GRATIS verzendkosten</li>
-                        <li class="plan-feature"><a href="mailto:info@emolio.nl?subject=KopenQuantum" class="btn btn-success btn-plan-select">Select</a></li>
+                        <li class="plan-feature"><a href="https://emolio.com/products/quantum-bioresonantie-apparaat-nederlandse-versie" class="btn btn-success btn-plan-select">Select</a></li>
                       </ul>
                     </div>
                     <div class="span3 plan">
@@ -360,7 +360,7 @@
                             <!--</a>-->
                         </li>
                         <li class="plan-feature">&euro;1381 incl. GRATIS verzendkosten</li>
-                        <li class="plan-feature"><a href="mailto:info@emolio.nl?subject=KopenQuantum3D" class="btn btn-success btn-plan-select">Select</a></li>
+                        <li class="plan-feature"><a href="https://emolio.com/products/bioresonantie-apparaat-8d-2de-generatie-nl-versie" class="btn btn-success btn-plan-select">Select</a></li>
                       </ul>
                     </div>
                     <div class="span3 plan">
@@ -381,7 +381,7 @@
                             </a>
                         </li>
                         <li class="plan-feature">&euro;1728 incl. GRATIS verzendkosten</li>
-                        <li class="plan-feature"><a href="mailto:info@emolio.nl?subject=KopenQuantum8D" class="btn btn-success btn-plan-select">Select</a></li>
+                        <li class="plan-feature"><a href="https://emolio.com/products/bioresonantie-apparaat-8d-2de-generatie-nl-versie" class="btn btn-success btn-plan-select">Select</a></li>
                       </ul>
                     </div>
                     <div class="span3 plan">
@@ -403,7 +403,7 @@
                             </a>
                         </li>
                         <li class="plan-feature">&euro; 2805 incl. GRATIS verzendkosten</li>
-                        <li class="plan-feature"><a href="mailto:info@emolio.nl?subject=KopenQuantumHunter" class="btn btn-success btn-plan-select">Select</a></li>
+                        <li class="plan-feature"><a href="https://emolio.com/products/bioresonantie-apparaat-quantum-hunter-3de-generatie" class="btn btn-success btn-plan-select">Select</a></li>
                       </ul>
                     </div>
                    
@@ -761,6 +761,10 @@
                         <span>"CURSUS Inhoud"</span>
                       </div>
                       <ul>
+                        <li class="plan-feature">Werkt het op Windows? Mac? 1:44 
+                            <i class="fas fa-exclamation-triangle"></i>
+                            <i class="fas fa-lock"></i>
+                        </li>
                         <li class="plan-feature">Installatie van de programma 1:44 
                             <i class="fas fa-exclamation-triangle"></i>
                             <i class="fas fa-lock"></i>
