--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                             <!--</a>-->
                         </li>
                         <li class="plan-feature">&euro;1381 incl. GRATIS verzendkosten</li>
-                        <li class="plan-feature"><a href="https://emolio.com/products/bioresonantie-apparaat-8d-2de-generatie-nl-versie" class="btn btn-success btn-plan-select">koop bioresonantie apparaat 2de</a></li>
+                        <li class="plan-feature"><a href="https://emolio.com/products/bioresonantie-apparaat-8d-2de-generatie-nl-versie" class="btn btn-success btn-plan-select">koop bioresonantie apparaat</a></li>
                       </ul>
                     </div>
                     <div class="span3 plan">
@@ -381,7 +381,7 @@
                             </a>
                         </li>
                         <li class="plan-feature">&euro;1728 incl. GRATIS verzendkosten</li>
-                        <li class="plan-feature"><a href="https://emolio.com/products/bioresonantie-apparaat-8d-2de-generatie-nl-versie" class="btn btn-success btn-plan-select">koop bioresonantie apparaat 3de</a></li>
+                        <li class="plan-feature"><a href="https://emolio.com/products/bioresonantie-apparaat-8d-2de-generatie-nl-versie" class="btn btn-success btn-plan-select">koop bioresonantie apparaat</a></li>
                       </ul>
                     </div>
                     <div class="span3 plan">
