--- a/index.html
+++ b/index.html
@@ -1344,6 +1344,7 @@
                     <div class="span3">
                         <h2>subscribe </h2>
                         <div class="input-append margintop20">
+                            Locatie: Alte Bahn 22 Kranenburg Duitsland
                             <!--<input class="span2" id="appendedInputButton" type="text" placeholder="Enter your email id..">
                             <button class="btn" type="button">Go!</button>-->
                         </div>
