--- a/privacy.html
+++ b/privacy.html
@@ -111,7 +111,7 @@
                         <div class="span12" style="color:black;">
                                 <h1>Privacy</h1>
                                 
-Emolio, gevestigd aan Trasmolenlaan 12 3447 GZ Woerden, Nederland, is verantwoordelijk voor de verwerking van persoonsgegevens zoals weergegeven in deze privacyverklaring.
+Emolio, gevestigd aan Alte Bahn 22 Kranenburg, Duitsland, is verantwoordelijk voor de verwerking van persoonsgegevens zoals weergegeven in deze privacyverklaring.
 
 Contactgegevens:
 
