--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <link href="css/pricing-table.css" rel="stylesheet" type='text/css'>
         <!-- Pricing table responsive -->
         <link href="css/pricing-table-responsive.css" rel="stylesheet" type='text/css'>
+        <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.20/default/snipcart.css" />
 
         <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
@@ -403,7 +404,19 @@
                             </a>
                         </li>
                         <li class="plan-feature">&euro; 2805 incl. GRATIS verzendkosten</li>
-                        <li class="plan-feature"><a href="https://emolio.com/products/bioresonantie-apparaat-quantum-hunter-3de-generatie" class="btn btn-success btn-plan-select">Koop bioresonantie apparaat</a></li>
+                        <li class="plan-feature">
+                            <button class="snipcart-add-item btn btn-success btn-plan-select"
+                                data-item-id="bioresonantce-quantum-hunter"
+                                data-item-price="2805"
+                                data-item-url="/"
+                                data-item-description="Bioresonantie apparaat, Quantum Hunter 3de generatie"
+                                data-item-image="/images/quantum-hunter-intro.png"
+                                data-item-name="Quantum Hunter 3de generatie">
+                                Koop Quantum Hunter 3de generatie
+                            </button>    
+                            <!--<a href="https://emolio.com/products/bioresonantie-apparaat-quantum-hunter-3de-generatie" class="btn btn-success btn-plan-select">Koop bioresonantie apparaat</a>-->
+                        
+                        </li>
                       </ul>
                     </div>
                    
@@ -1484,5 +1497,7 @@ add_chatinline(); </script>-->
     })();
 </script>
 <!-- /WhatsHelp.io widget -->
+<div id="snipcart" data-api-key="YjU2YWZhMTQtZWYyZC00MGZmLWFjYWMtNGMxOGIzOTA5N2NlNjM3MzA4MzExNjc2MTIyNzEw" hidden></div>
+<script src="https://cdn.snipcart.com/themes/v3.0.20/default/snipcart.js"></script>
     </body>
 </html>
