all links to snip

--- a/index.html
+++ b/index.html
@@ -342,7 +342,18 @@
                             </a>
                         </li>
                         <li class="plan-feature">&euro;684 incl. GRATIS verzendkosten</li>
-                        <li class="plan-feature"><a href="https://emolio.com/products/quantum-bioresonantie-apparaat-nederlandse-versie" class="btn btn-success btn-plan-select">koop bioresonantie apparaat</a></li>
+                        <li class="plan-feature">
+                            <button class="snipcart-add-item btn btn-success btn-plan-select"
+                                data-item-id="bioresonantce-quantum"
+                                data-item-price="684"
+                                data-item-url="/"
+                                data-item-description="Bioresonantie apparaat, Quantum"
+                                data-item-image="/images/quantum-intro.png"
+                                data-item-name="Quantum 3D 1ste generatie">
+                                Koop Quantum
+                            </button> 
+                            <!--<a href="https://emolio.com/products/quantum-bioresonantie-apparaat-nederlandse-versie" class="btn btn-success btn-plan-select">koop bioresonantie apparaat</a>-->
+                        </li>
                       </ul>
                     </div>
                     <div class="span3 plan">
@@ -361,7 +372,19 @@
                             <!--</a>-->
                         </li>
                         <li class="plan-feature">&euro;1381 incl. GRATIS verzendkosten</li>
-                        <li class="plan-feature"><a href="https://emolio.com/products/bioresonantie-apparaat-8d-2de-generatie-nl-versie" class="btn btn-success btn-plan-select">koop bioresonantie apparaat</a></li>
+                        <li class="plan-feature">
+                            <button class="snipcart-add-item btn btn-success btn-plan-select"
+                                data-item-id="bioresonantce-quantum-3d"
+                                data-item-price="1381"
+                                data-item-url="/"
+                                data-item-description="Bioresonantie apparaat, Quantum 3D 1ste generatie"
+                                data-item-image="/images/wordt-aan-gewerkt.png"
+                                data-item-name="Quantum 3D 1ste generatie">
+                                Koop Quantum 3D 1ste generatie
+                            </button> 
+                            <!--<a href="https://emolio.com/products/bioresonantie-apparaat-8d-2de-generatie-nl-versie" class="btn btn-success btn-plan-select">koop bioresonantie apparaat</a>-->
+                        
+                        </li>
                       </ul>
                     </div>
                     <div class="span3 plan">
@@ -382,7 +405,18 @@
                             </a>
                         </li>
                         <li class="plan-feature">&euro;1728 incl. GRATIS verzendkosten</li>
-                        <li class="plan-feature"><a href="https://emolio.com/products/bioresonantie-apparaat-8d-2de-generatie-nl-versie" class="btn btn-success btn-plan-select">koop bioresonantie apparaat</a></li>
+                        <li class="plan-feature">
+                            <button class="snipcart-add-item btn btn-success btn-plan-select"
+                                data-item-id="bioresonantce-quantum-8D"
+                                data-item-price="1728"
+                                data-item-url="/"
+                                data-item-description="Bioresonantie apparaat, Quantum 8D"
+                                data-item-image="/images/quantum-intro.png"
+                                data-item-name="Quantum 8D 2de generatie">
+                                Koop Quantum 8D 2de generatie
+                            </button> 
+                            <!--<a href="https://emolio.com/products/bioresonantie-apparaat-8d-2de-generatie-nl-versie" class="btn btn-success btn-plan-select">koop bioresonantie apparaat</a>-->
+                        </li>
                       </ul>
                     </div>
                     <div class="span3 plan">
