--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
                                 <i class="fab fa-youtube"></i>
                         </li>
                         <li class="plan-feature">&euro;231</li>
-                        <li class="plan-feature"><a href="mailto:info@emolio.nl?subject=Cursus8D" class="btn btn-success btn-plan-select">Select</a></li>
+                        <li class="plan-feature"><a href="mailto:hello@bm-insight.com?subject=Cursus8D" class="btn btn-success btn-plan-select">Select</a></li>
                         <li class="plan-feature">legenda<br>
                             <i class="fas fa-exclamation-triangle"></i> in ontwikkeling<br>
                             <i class="fab fa-youtube"></i> GRATIS kijken<br>
@@ -765,7 +765,7 @@
                         
                         <li class="plan-feature"></li>
                         <li class="plan-feature">&euro; 235</li>
-                        <li class="plan-feature"><a href="mailto:info@emolio.nl?subject=CursusHunter" class="btn btn-success btn-plan-select">Select</a></li>
+                        <li class="plan-feature"><a href="mailto:hello@bm-insight.com?subject=CursusHunter" class="btn btn-success btn-plan-select">Select</a></li>
                         <li class="plan-feature">legenda<br>
                             <i class="fas fa-exclamation-triangle"></i> in ontwikkeling<br>
                             <i class="fab fa-youtube"></i> GRATIS kijken<br>
@@ -884,7 +884,7 @@
                           
                           <li class="plan-feature"></li>
                           <li class="plan-feature">&euro; 235</li>
-                          <li class="plan-feature"><a href="mailto:info@emolio.nl?subject=CursusHunter" class="btn btn-success btn-plan-select">Select</a></li>
+                          <li class="plan-feature"><a href="mailto:hello@bm-insight.com?subject=CursusHunter" class="btn btn-success btn-plan-select">Select</a></li>
                           <li class="plan-feature">legenda<br>
                               <i class="fas fa-exclamation-triangle"></i> in ontwikkeling<br>
                               <i class="fab fa-youtube"></i> GRATIS kijken<br>
@@ -1269,7 +1269,7 @@
                             <p>
 
                             </p>
-                            <a class="btn btn-landing btn-large" href="mailto:info@emolio.nl">Maak vandaag nog een afspraak </a>              </div>
+                            <a class="btn btn-landing btn-large" href="mailto:hello@bm-insight.com">Maak vandaag nog een afspraak </a>              </div>
 
                     </div>
                     <br />
@@ -1463,7 +1463,7 @@ add_chatinline(); </script>-->
 <script type="text/javascript">
     (function () {
         var options = {
-            whatsapp: "+31614454426", // WhatsApp number
+            whatsapp: "+31650692598", // WhatsApp number
             company_logo_url: "//static.whatshelp.io/img/flag.png", // URL of company logo (png, jpg, gif)
             greeting_message: "Hello mijn naam is Davor, kan ik u ergens mee helpen?", // Text of greeting message
             call_to_action: "Heeft u vragen?", // Call to action
