--- a/index.html
+++ b/index.html
@@ -232,22 +232,20 @@
                 <!--################ TESTIMONIALS SECTION START ################-->
                 <section id="testimonials">
 		    <div class="row">
-                        <h2> Ervaringen met Bioresonantie Apparaat<i class="icon-thumbs-up"></i></h2>
+                        <h2> Samenwerking tussen BM-Insight en Emolio<i class="icon-thumbs-up"></i></h2>
                         <div class="span7 main-media" >
-                            <iframe src="https://www.youtube.com/embed/nF96DRgDu-8?rel=0" width="570" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-                        </div>
+                            <iframe loading="lazy" title="In gesprek met BM-Insight en Emolio over holistische vitaliteit en kwantum resonantie" src="https://player.vimeo.com/video/660509177?h=71e20cc8ee&amp;dnt=1&amp;app_id=122963" width="1200" height="675" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen=""></iframe>
+                   </div>
                         <div class="span5">
 
-                            <h2>Interview met Paul van Maaren</h2>
+                            <h2>BM-Insight en Emolio</h2>
                             <p>
-                                Ik was heel erg onder de indruk van onderzoek die Paul heeft gedaan voordat hij apparaat heeft gekocht. 
-                                Daarom ben ik heel blij dat we interview konden maken en hij kon zijn ervaring delen.
+                                In gesprek met BM-Insight en Emolio over holistische vitaliteit en kwantum resonantie
                             </p>
                             
                             <p>    	
-			
-			<iframe loading="lazy" title="In gesprek met BM-Insight en Emolio over holistische vitaliteit en kwantum resonantie" src="https://player.vimeo.com/video/660509177?h=71e20cc8ee&amp;dnt=1&amp;app_id=122963" width="1200" height="675" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen=""></iframe>
-                    </p>
+				<a  href="https://player.vimeo.com/video/660509177?h=71e20cc8ee&amp;dnt=1&amp;app_id=122963" class="colorbox btn btn-landing btn-small youtube">Bekijk interview</a>
+			                    </p>
                         </div>
                         
                     </div>
