FIX BUG WHATSAPP

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
         <!-- Le styles -->
         <link href="css/bootstrap.css" rel="stylesheet">
-        <link href="css/font-awesome.css" media="all" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <!--<link href="css/font-awesome.css" media="all" rel="stylesheet" type="text/css" />-->
         <link href="css/style.css" rel="stylesheet">
         <link href="css/switcher.css" rel="stylesheet">
         <link href="css/colorbox.css" rel="stylesheet">
@@ -21,7 +22,7 @@
         <!-- Pricing table responsive -->
         <link href="css/pricing-table-responsive.css" rel="stylesheet" type='text/css'>
         <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.20/default/snipcart.css" />
-
+        
         <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
           <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -1124,6 +1125,7 @@
 
   gtag('config', 'UA-109504359-1');
 </script>
+
 <script type="text/javascript">
     adroll_adv_id = "DEYXO32M5ZCMBMJ5K7LIQ4";
     adroll_pix_id = "ZHQTS7ENPNAAXFQDVP23T3";
@@ -1145,10 +1147,16 @@
         else {window.attachEvent('onload', _onload)}
     }());
 </script>
+
 <iframe style="display: none;" id="frame"></iframe>
 <!--<script type="text/javascript">function add_chatinline(){var hccid=49138906;var nt=document.createElement("script");nt.async=true;nt.src="https://mylivechat.com/chatinline.aspx?hccid="+hccid;var ct=document.getElementsByTagName("script")[0];ct.parentNode.insertBefore(nt,ct);}
 add_chatinline(); </script>-->
-<!-- WhatsHelp.io widget -->
+
+  
+<a href="https://api.whatsapp.com/send?phone=+31650692598&text=Emolio.nl" class="float" target="_blank">
+    <i class="fa fa-whatsapp my-float"></i>
+    </a>
+<!-- WhatsHelp.io widget 
 <script type="text/javascript">
     (function () {
         var options = {
@@ -1164,7 +1172,7 @@ add_chatinline(); </script>-->
         var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
     })();
 </script>
-<!-- /WhatsHelp.io widget -->
+/WhatsHelp.io widget -->
 <div id="snipcart" data-api-key="NzAxYzE0NmUtMGU5NS00MDRlLWE0ZTUtNDRkMDEzNDQ0OWRiNjM3MzA4MzExNjc2MTIyNzEw" hidden></div>
 <script src="https://cdn.snipcart.com/themes/v3.0.20/default/snipcart.js"></script>
     </body>
