--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
                     </div>
 
                     <div class="span3">
-                        <h2>subscribe </h2>
+                        <h2>Contact </h2>
                         <div class="input-append margintop20">
                             Locatie: Alte Bahn 22 Kranenburg Duitsland
                             <!--<input class="span2" id="appendedInputButton" type="text" placeholder="Enter your email id..">
@@ -1050,8 +1050,8 @@
                         </div>
                         <ul class="inline social margintop20">
 
-                            <!--<li><i class="icon-facebook"></i></li>
-                            <li><i class="icon-twitter"></i></li>
+                            <li><a href="mailto:hello@bm-insight.com">hello@bm-insight.com</a></li>
+                            <!--<li><i class="icon-twitter"></i></li>
                             <li><i class="icon-linkedin"></i></li>-->
                         </ul>
 
