--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,7 @@
 
         
         
-        <script src="js/custom.js"></script>
+        <!--<script src="js/custom.js"></script>-->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109504359-1"></script>
 <script>
