--- a/index.html
+++ b/index.html
@@ -1172,7 +1172,7 @@ add_chatinline(); </script>-->
 
   
 <a href="https://api.whatsapp.com/send?phone=+31650692598&text=Emolio.nl" class="float" target="_blank">
-    <i class="fa fa-whatsapp my-float"></i>
+    <i class="fab fa-whatsapp my-float"></i>
     </a>
 <!-- WhatsHelp.io widget 
 <script type="text/javascript">
