--- a/index.html
+++ b/index.html
@@ -1033,7 +1033,7 @@
                         </div>
                         <ul class="inline social margintop20">
 
-                            <li><a href="mailto:hello@bm-insight.com">hello@bm-insight.com</a></li>
+                            <li><a href="mailto:vital@energeticbubble.com">vital@energeticbubble.com</a></li>
                             <!--<li><i class="icon-twitter"></i></li>
                             <li><i class="icon-linkedin"></i></li>-->
                         </ul>
