--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
         <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
-        <link rel="shortcut icon" href="ico/favicon.png">
+        <link rel="shortcut icon" href="/images/favicon.ico">
         <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 
 
